# zeus

./: .gitignore  README.md  example.py  pyproject.toml  strategy.md
src/archive/: pyproject.toml  tradingview.db
src/archive/backend/: README.md
src/archive/backend/api/: option_price.py
src/archive/backend/broker/ib/: broker.py  example.py  options.py  signals.py
src/archive/backend/broker/ib/cache/: option_list.txt.db
src/archive/backend/calculate/: protocol.py
src/archive/backend/calculate/custom/: fx_check.py  ma_hit.py  macd_area.py  matcher.py  mix_in.py
src/archive/backend/calculate/zen/signal/: __init__.py
src/archive/backend/curd/sqllite/: model.py
src/archive/backend/datafeed/: udf.py
src/archive/backend/utils/: example.py  logger.py  model_convert.py  options.py  wechat_push.py
src/archive/czsc/: enum.py  envs.py  objects.py
src/archive/czsc/signals/: tas.py
src/archive/zen-rs/: Cargo.toml
src/archive/zen-rs/moomoo-rs/src/pb/futu/: get_delay_statistics.rs  get_global_state.rs  get_user_info.rs  init_connect.rs  mod.rs  qot_common.rs  qot_get_basic_qot.rs  qot_get_broker.rs  qot_get_capital_distribution.rs  qot_get_capital_flow.rs  qot_get_future_info.rs  qot_get_holding_change_list.rs  qot_get_option_chain.rs  qot_get_option_expiration_date.rs  qot_get_order_book.rs  qot_get_plate_security.rs  qot_get_plate_set.rs  qot_get_price_reminder.rs  qot_get_reference.rs  qot_get_security_snapshot.rs  qot_get_static_info.rs  qot_get_suspend.rs  qot_get_trade_date.rs  qot_get_user_security.rs  qot_get_user_security_group.rs  qot_modify_user_security.rs  qot_reg_qot_push.rs  qot_request_history_kl.rs  qot_request_rehab.rs  qot_request_trade_date.rs  qot_set_price_reminder.rs  qot_stock_filter.rs  qot_update_basic_qot.rs  qot_update_broker.rs  qot_update_kl.rs  qot_update_order_book.rs  qot_update_price_reminder.rs  trd_get_acc_list.rs  trd_get_funds.rs  trd_get_history_order_fill_list.rs  (+10 more)
src/archive/zen-rs/talipp/src/indicator/: macd.rs  sma.rs
src/archive/zen-rs/tws-rs/: Cargo.toml  README.md
src/archive/zen-rs/tws-rs/examples/: historical_bars.rs
src/archive/zen-rs/tws-rs/src/: client.rs  lib.rs  messages.rs
src/archive/zen-rs/tws-rs/src/client/: transport.rs
src/archive/zen-rs/tws-rs/src/client/market_data/: realtime.rs
src/archive/zen-rs/tws-rs/src/client/market_data/historical/: decoders.rs
src/archive/zen-rs/tws-rs/src/client/transport/: message_bus.rs
src/archive/zen-rs/zen-core/src/objects/: chan.rs
src/archive/zen-rs/zen-quat/config/: default.yaml  event_matcher.yaml  merge_event.sh
src/archive/zen-rs/zen-quat/config/events/: 小顶-大顶.yaml
src/archive/zen-rs/zen-quat/script/: fetch_screenshot.sh  screenshot_merge.sh  us_option.txt
src/archive/zen-rs/zen-quat/src/: schema.rs  serve.rs
src/archive/zen-rs/zen-quat/src/api/: params.rs
src/archive/zen-rs/zen-quat/src/broker/: ib.rs  local_db.rs
src/archive/zen-rs/zen-quat/src/calculate/: mod.rs  trait.rs  zen_cache.rs
src/archive/zen-rs/zen-quat/src/calculate/beichi/: buy_sell_point.rs
src/archive/zen-rs/zen-quat/src/pkg/: mod.rs  screenshot.rs
src/archive/zen-rs/zen-quat/src/pkg/stock_scan/: mod.rs
src/zen/: .gitignore  README.md  TODO.md  app.py  curd.py  flag.py  main.py  param.py  pyproject.toml  test.html  udf.py
src/zen-rs/zen-core/: Cargo.toml  README.md
src/zen-rs/zen-core/src/: analyze.rs  lib.rs  objects.rs  settings.rs
src/zen-rs/zen-core/src/objects/: chan.rs  enums.rs  trade.rs
src/zen-rs/zen-quat/: Cargo.toml  pyproject.toml  tradingview.db
src/zen-rs/zen-quat/config/: benchi.yaml  default.yaml  event_matcher.yaml  event_matcher.yaml.bak
src/zen-rs/zen-quat/config/events/: 小底-大底.yaml  小底-大推.yaml  小顶-大推.yaml  小顶-大顶.yaml
src/zen-rs/zen-quat/config/trade_system/: README_交易系统.md
src/zen-rs/zen-quat/script/: china_stock.txt  fetch_screenshot.sh  get_page_comment.py  screenshot_merge.sh  update_local_db.py  us_option.txt  us_stock.txt  watchlist.txt
src/zen-rs/zen-quat/script/screenshot/: package-lock.json
src/zen-rs/zen-quat/src/: api.rs  calculate.rs  db.rs  lib.rs  main.rs  schema.rs  serve.rs  zen_manager.rs
src/zen-rs/zen-quat/src/api/: params.rs
src/zen-rs/zen-quat/src/broker/: ib.rs  local_db.rs  mixed.rs  mod.rs  trait.rs  zen.rs
src/zen-rs/zen-quat/src/calculate/: README.md  macd_area.rs  mod.rs  sma_tracker.rs  trait.rs
src/zen-rs/zen-quat/src/calculate/beichi/: buy_sell_point.rs  mod.rs
src/zen-rs/zen-quat/src/calculate/others/: macd_area.rs  mod.rs  sma_tracker.rs
src/zen-rs/zen-quat/src/calculate/signals/: mod.rs  profit_loss_ratio.rs
src/zen-rs/zen-quat/src/calculate/signals/ma/: distance.rs
src/zen-rs/zen-quat/src/calculate/signals/power/: mod.rs  strength.rs
src/zen-rs/zen-quat/src/calculate/signals/structure/: consistence.rs
src/zen-rs/zen-quat/src/db/: models.rs
src/zen-rs/zen-quat/src/pkg/: load_db.rs  mod.rs  screenshot.rs
src/zen-rs/zen-quat/src/pkg/stock_scan/: README.md  README_缠论.md
src/zen-rs/zen-quat/src/utils/: notify.rs
src/zen/broker/: enums.py  futu.py  ib.py  mixed.py
src/zen/core/: Cargo.toml  pyproject.toml
src/zen/core/src/: analyze.rs  element.rs  lib.rs  setting.rs  store.rs
src/zen/core/src/calculate/: README.md  README_缠论.md  trait.rs
src/zen/core/src/calculate/beichi/: buy_sell_point.rs
src/zen/core/src/calculate/others/: mod.rs  sma_tracker.rs
src/zen/core/src/calculate/signals/ma/: distance.rs
src/zen/core/src/calculate/signals/power/: strength.rs
src/zen/core/src/calculate/signals/structure/: consistence.rs
src/zen/core/src/element/: chan.rs  enums.rs  event.rs
src/zen/core/src/talipp/indicator/: ema.rs  macd.rs  sma.rs
src/zen/core/src/utils/: notify.rs
src/zen/core/tests/: aa.py
src/zen/data/: china_stock.txt  filter.txt  us_option.txt  us_stock.txt  watchlist.txt
src/zen/examples/: ib_test.py
src/zen/model/: db.py
src/zen/moomoo_async/: client.py  quoto.py  util.py
src/zen/script/: datafeed.py  m_add_toc.py  m_screenshot.py  screenshot_merge.sh  sync_symbol.py  ttm_pdf.sh  ttm_squeeze_scaner.py
src/zen/utils/: logger.py
(+223 files in other folders)
