[package]
name = "zen-quat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"

[dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tokio = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.20"
zen-core = { path = "../zen-core" }
time = "0.3.34"
env_logger = "0.11.2"
tws-rs = { path = "../tws-rs" }
futures-util = "0.3.30"
state = { version = "0.6.0", features = ["tls"] }
actix-web = "4.5.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
actix-cors = "0.7.0"
tokio-util = "0.7.10"
diesel_logger = "0.3.0"
chrono = "0.4.34"
notify-rust = "4.10.0"
lru = "0.12.3"
talipp = { path = "../talipp" }
cached = { version = "0.49.2", features = ["async"] }

headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
