[tool.poetry]
name = "zen-quat"
version = "0.1.0"
description = ""
authors = ["yuanzx <yuanzx@yunphant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ib-insync = "^0.9.86"
loguru = "^0.7.2"
ratelimiter = "^1.2.0.post0"
pyrate-limiter = "^3.6.1"
pytz = "^2024.1"
sanic = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
