[tool.poetry]
name = "zen-quat"
version = "0.1.0"
description = ""
authors = ["yuanzx <yuanzx@yunphant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
