[package]
name = "zen-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zen_core"
crate-type = ["cdylib"]

[dependencies]
anymap3 = "1.0.0"
cached = "0.53.1"
chrono = "0.4.38"
chrono-tz = "0.10.0"
config = "0.14.0"
dict_derive = "0.6.0"
notify-rust = "4.11.3"
pyo3 = { version = "0.22.3", features = ["chrono", "chrono-tz"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-test = "0.2.5"
serde_json = "1.0.128"
