[package]
name = "tws-rs"
version = "0.1.0"
edition = "2021"
description = "tokio tws API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.17", features = [
    "formatting",
    "macros",
    "local-offset",
    "parsing",
] }
time-tz = "2.0.0"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
byteorder = "1.5.0"
tracing-test = "0.2.4"
tracing = "0.1.40"
derivative = "2.2.0"
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.18"
drop-stream = "0.3.0"
actix = "0.13.3"
cached = { version = "0.49.2", features = ["async"] }
zen-core = { path = "../zen-core" }


[profile.release]
incremental = true
debug = true
lto = "fat"
